--- a/core/igb/src/com/affymetrix/igb/util/ConfigureFilters.form
+++ b/core/igb/src/com/affymetrix/igb/util/ConfigureFilters.form
@@ -66,7 +66,7 @@
             <EventHandler event="valueChanged" listener="javax.swing.event.ListSelectionListener" parameters="javax.swing.event.ListSelectionEvent" handler="filterListValueChanged"/>
           </Events>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="filterList.setSelectionMode(ListSelectionModel.SINGLE_SELECTION);"/>
+            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="filterList.setSelectionMode(javax.swing.ListSelectionModel.SINGLE_SELECTION);"/>
           </AuxValues>
         </Component>
       </SubComponents>
