Enable double click to edit.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15247 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/src/com/affymetrix/igb/util/ConfigureFilters.form
+++ b/core/igb/src/com/affymetrix/igb/util/ConfigureFilters.form
@@ -63,6 +63,7 @@
             </Property>
           </Properties>
           <Events>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="filterListMouseClicked"/>
             <EventHandler event="valueChanged" listener="javax.swing.event.ListSelectionListener" parameters="javax.swing.event.ListSelectionEvent" handler="filterListValueChanged"/>
           </Events>
           <AuxValues>
