--- a/core/igb/src/com/affymetrix/igb/util/ConfigureFilters.form
+++ b/core/igb/src/com/affymetrix/igb/util/ConfigureFilters.form
@@ -67,7 +67,7 @@
             <EventHandler event="valueChanged" listener="javax.swing.event.ListSelectionListener" parameters="javax.swing.event.ListSelectionEvent" handler="filterListValueChanged"/>
           </Events>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="filterList.setSelectionMode(javax.swing.ListSelectionModel.SINGLE_SELECTION);"/>
+            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="filterList.setSelectionMode(javax.swing.ListSelectionModel.SINGLE_SELECTION);&#xa;filterList.setCellRenderer(new FilterListCellRenderer());"/>
           </AuxValues>
         </Component>
       </SubComponents>
