--- a/core/igb/src/com/affymetrix/igb/util/ConfigureFilters.form
+++ b/core/igb/src/com/affymetrix/igb/util/ConfigureFilters.form
@@ -59,7 +59,7 @@
         <Component class="javax.swing.JList" name="filterList">
           <Properties>
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-              <Connection code="new DefaultListModel()" type="code"/>
+              <Connection code="new javax.swing.DefaultListModel()" type="code"/>
             </Property>
           </Properties>
           <Events>
