Changing display text.
git-svn-id: http://svn.code.sf.net/p/genoviz/code/trunk@15663 80d5a9c2-7d8c-4c9f-9369-4e03bca4d2bd

--- a/core/igb/src/com/affymetrix/igb/view/NewGenome.form
+++ b/core/igb/src/com/affymetrix/igb/view/NewGenome.form
@@ -92,7 +92,7 @@
     <Component class="javax.swing.JCheckBox" name="switchCheckBox">
       <Properties>
         <Property name="selected" type="boolean" value="true"/>
-        <Property name="text" type="java.lang.String" value="Switch to new species after creating it"/>
+        <Property name="text" type="java.lang.String" value="Switch to custom genome"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="refSeqLabel">
