--- a/core/igb/src/com/affymetrix/igb/shared/ExportDialogGUI.form
+++ b/core/igb/src/com/affymetrix/igb/shared/ExportDialogGUI.form
@@ -91,17 +91,9 @@
                           <Component id="resolutionComboBox" max="32767" attributes="1"/>
                       </Group>
                   </Group>
-                  <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" attributes="0">
-                          <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
-                          <Component id="unitComboBox" min="-2" pref="91" max="-2" attributes="1"/>
-                      </Group>
-                      <Group type="102" alignment="0" attributes="0">
-                          <EmptySpace type="unrelated" max="-2" attributes="0"/>
-                          <Component id="Reset" min="-2" max="-2" attributes="0"/>
-                      </Group>
-                  </Group>
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+                  <Component id="unitComboBox" min="-2" pref="91" max="-2" attributes="1"/>
+                  <EmptySpace min="0" pref="64" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -115,14 +107,13 @@
                       <Component id="heightLabel" alignment="2" min="-2" max="-2" attributes="0"/>
                       <Component id="widthLabel" alignment="2" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="2" attributes="0">
                       <Component id="sizeLabel" alignment="2" min="-2" max="-2" attributes="0"/>
                       <Component id="resolutionComboBox" alignment="2" min="-2" max="-2" attributes="0"/>
                       <Component id="resolutionLabel" alignment="2" min="-2" max="-2" attributes="0"/>
-                      <Component id="Reset" alignment="2" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace max="32767" attributes="0"/>
+                  <EmptySpace pref="7" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -186,17 +177,6 @@
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="ed.sizeLabel"/>
           </AuxValues>
         </Component>
-        <Component class="javax.swing.JButton" name="Reset">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="Reset"/>
-          </Properties>
-          <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="ResetActionPerformed"/>
-          </Events>
-          <AuxValues>
-            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="ed.resetButton"/>
-          </AuxValues>
-        </Component>
       </SubComponents>
     </Container>
     <Container class="javax.swing.JPanel" name="previewPanel">
@@ -230,14 +210,16 @@
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <Group type="102" attributes="0">
-                  <Component id="buttonsPanel" min="-2" max="-2" attributes="1"/>
-                  <EmptySpace pref="27" max="32767" attributes="0"/>
-                  <Component id="refreshButton" min="-2" max="-2" attributes="0"/>
-              </Group>
               <Group type="102" alignment="0" attributes="0">
-                  <Component id="previewLabel" min="-2" pref="142" max="-2" attributes="1"/>
-                  <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="1" attributes="0">
+                      <Group type="102" attributes="0">
+                          <Component id="buttonsPanel" min="-2" max="-2" attributes="1"/>
+                          <EmptySpace max="-2" attributes="0"/>
+                          <Component id="refreshButton" min="-2" max="-2" attributes="0"/>
+                      </Group>
+                      <Component id="previewLabel" min="-2" pref="142" max="-2" attributes="1"/>
+                  </Group>
+                  <EmptySpace min="0" pref="21" max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -332,15 +314,14 @@
         </Container>
         <Component class="javax.swing.JButton" name="refreshButton">
           <Properties>
-            <Property name="text" type="java.lang.String" value="Refresh"/>
-            <Property name="toolTipText" type="java.lang.String" value="Refresh preview"/>
+            <Property name="text" type="java.lang.String" value="Update Preview Image"/>
+            <Property name="toolTipText" type="java.lang.String" value="Click to update Preview and image dimensions after changing IGB."/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="refreshButtonActionPerformed"/>
           </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="ed.refreshButton"/>
-            <AuxValue name="JavaCodeGenerator_InitCodePost" type="java.lang.String" value="refreshButton.setToolTipText(&quot;Refreshes the size and the preview to the current dimensions of the image.&quot;);"/>
           </AuxValues>
         </Component>
       </SubComponents>
