modifications to core/igb build configuration and source code for new project structure

--- a/core/igb/src/com/affymetrix/igb/shared/TrackPreferencesGUI.form
+++ b/core/igb/src/com/affymetrix/igb/shared/TrackPreferencesGUI.form
@@ -603,7 +603,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="stackDepthTextFieldActionPerformed"/>
           </Events>
           <AuxValues>
-            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new com.affymetrix.genoviz.swing.recordplayback.JRPTextField(&quot;trackPreference_maxDepth&quot;)"/>
+            <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new com.affymetrix.com.affymetrix.igb.swing.JRPTextField(&quot;trackPreference_maxDepth&quot;)"/>
             <AuxValue name="JavaCodeGenerator_CreateCodePost" type="java.lang.String" value="((AbstractDocument)stackDepthTextField.getDocument()).setDocumentFilter(new NumericFilter.IntegerNumericFilter());"/>
           </AuxValues>
         </Component>
