--- a/core/igb/src/com/affymetrix/igb/shared/ExportDialogGUI.form
+++ b/core/igb/src/com/affymetrix/igb/shared/ExportDialogGUI.form
@@ -113,7 +113,7 @@
                       <Component id="resolutionComboBox" alignment="2" min="-2" max="-2" attributes="0"/>
                       <Component id="resolutionLabel" alignment="2" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <EmptySpace pref="7" max="32767" attributes="0"/>
+                  <EmptySpace max="32767" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -375,6 +375,9 @@
           </AuxValues>
         </Component>
         <Component class="javax.swing.JTextField" name="filePathTextField">
+          <Events>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="filePathTextFieldFocusLost"/>
+          </Events>
           <AuxValues>
             <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="ed.filePathTextField"/>
           </AuxValues>
